# v1-162-part1

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  exit  pyproject.toml
app/: rag_chain.py  retriever.py  server.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/pages/: _app.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/app/: page.tsx
rag_load_and_process/: rag_load_and_process.py
scripts/: debug_vector_content.py
tests/: test_dependencies.py  test_pgvector_connection.py  test_rag_chain.py  test_rag_load_and_process.py  test_rag_stream.py  test_retrieval_only.py
